<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clases"
            android:title="@string/classes" />
        <item
            android:id="@+id/nav_notificaciones"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_notas"
            android:title="@string/qualificatios" />
        <item
            android:id="@+id/nav_profesores"
            android:title="@string/professors"
            />
        <item
            android:id="@+id/nav_comunidades"
            android:title="@string/comunities" />
    </group>

</menu>