<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/side_nav_bar"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">
<!--TODO Hacer Dimens, Strings hechos-->
    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imageViewU"
        android:layout_width="77dp"
        android:layout_height="82dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/u_logo"
        app:civ_border_color="@android:color/transparent"
        app:civ_shadow="false" />

    <TextView
        android:id="@+id/tvtUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginStart="100dp"
        android:text="@string/gc_tvt_hint_User"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/tvtUserSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvtUserName"
        android:layout_marginStart="100dp"
        android:layout_marginTop="9dp"
        android:text="@string/gc_tvt_hint_Surname" />

    <TextView
        android:id="@+id/tvtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="125dp"
        android:text="@string/gc_tvt_hint_Email" />

</RelativeLayout>