<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:theme="@style/AppTheme"
    tools:context=".Login.Login">

    <LinearLayout
        android:layout_width="@dimen/w_LinearLayout"
        android:layout_height="@dimen/h_LinearLayout"
        android:layout_above="@+id/btnLogin"
        android:layout_below="@+id/ivLogo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/ms_LinearLayout"
        android:layout_marginTop="@dimen/mt_LinearLayout"
        android:layout_marginEnd="@dimen/me_LinearLayout"
        android:layout_marginBottom="@dimen/mb_LinearLayout"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPass"
            android:layout_marginTop="@dimen/mt_InputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pass_hint"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/h_ImageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="@dimen/ms_ImageView"
        android:layout_marginTop="@dimen/mt_ImageView"
        android:layout_marginEnd="@dimen/me_ImageView"
        android:layout_marginBottom="@dimen/mb_ImageView"
        android:background="@drawable/u_logo"
        android:src="@drawable/radius_logo" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/w_btnLogin"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/ms_btnLogin"
        android:layout_marginEnd="@dimen/me_btnLogin"
        android:layout_marginBottom="@dimen/mb_btnLogin"
        android:background="@drawable/circle_button"
        android:backgroundTint="@color/button_text"
        android:enabled="false"
        android:text="@string/btn_login_text"
        android:textColor="@android:color/white" />
</RelativeLayout>