<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frag1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ExtraText">

<!--TODO Hacer Dimens, Strings Hechos-->
    <ScrollView
        android:id="@+id/scrollview1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="80dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="85dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:orientation="vertical"
                android:singleLine="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilName"
                    android:layout_width="match_parent"
                    android:layout_height="80dp">

                    <EditText
                        android:id="@+id/etName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="textCapWords"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="105dp"
                android:layout_marginEnd="200dp"
                android:orientation="vertical"
                android:singleLine="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etSurname"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname1"
                        android:inputType="textCapWords"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="105dp"
                android:layout_marginEnd="25dp"
                android:orientation="vertical"
                android:singleLine="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilSurname2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etSurname2"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname2"
                        android:inputType="textCapWords"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="205dp"
                android:layout_marginEnd="55dp"
                android:orientation="vertical"
                android:singleLine="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilBirthday"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginTop="0dp">


                    <EditText
                        android:id="@+id/etBirthday"
                        android:layout_width="275dp"
                        android:layout_height="45dp"
                        android:focusable="false"
                        android:inputType="textCapWords"
                        android:hint="@string/birthday" />


                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <Button
                android:id="@+id/btnclearDate"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="300dp"
                android:layout_marginTop="205dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="15dp"
                android:background="@android:color/transparent"
                android:drawableBottom="@android:drawable/ic_menu_close_clear_cancel" />

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="80dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="295dp"
                android:layout_marginEnd="25dp"
                android:orientation="vertical"
                android:singleLine="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilAddress"
                    android:layout_width="match_parent"
                    android:layout_height="75dp">

                    <EditText
                        android:id="@+id/etAddress"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:hint="@string/address"
                        android:inputType="textCapWords"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="385dp"
                android:layout_marginEnd="200dp"
                android:orientation="vertical"
                android:singleLine="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPostalCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPostalCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/postalCode"
                        android:inputType="textCapWords"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout

                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="385dp"
                android:layout_marginEnd="25dp"
                android:orientation="vertical"
                android:singleLine="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:inputType="textCapWords"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="200dp"
                android:layout_marginTop="480dp"
                android:layout_marginEnd="25dp"
                android:orientation="vertical"
                android:singleLine="true">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tilPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="phone"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="25dp"
                android:layout_marginTop="485dp"
                android:layout_marginEnd="200dp"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/spPhoneType"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:entries="@array/array_phone" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fABtnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle_button"
        android:backgroundTint="@color/button_text"
        android:clickable="false"
        android:enabled="false"
        android:src="@drawable/ic_trending_flat" />
</RelativeLayout>



